--- a/agentmock-console/src/agentmock.properties
+++ b/agentmock-console/src/agentmock.properties
@@ -17,12 +17,18 @@ agentmock.controller.list=\
 agentmock.command.url.prefix=/command/
 agentmock.commu.url.prefix=/commu/
 
-file.root=/app/fileSystem/
-file.root.windows=C:\\fileSystem\\
+file.root=/app/notifyMsg/
+file.root.windows=C:\\notifyMsg\\
 
-agentmock.sendmsg.path=sitemap
-agentmock.sendmsg.file=sitemap.txt
+# send notify switch, true or false
+agentmock.sendmsg.switch = false
+# send notify internal, the unit is milliseconds!
+agentmock.sendmsg.internal = 10000
+# send notify counts
+agentmock.sendmsg.count = 2
 agentmock.sendmsg.agent.url=http://localhost:8888/AgentMockService
-
 #scheduled tasks
 agentmock.setting.schedule.task=com.taobao.caipiao.agentmock.core.impl.SendNotifyTask
+agentmock.sendmsg.path=notify
+agentmock.sendmsg.file=  \
+						notifyTest.xml
