add new feature: log the message

--- a/agentmock-console/bin/agentmock.properties
+++ b/agentmock-console/bin/agentmock.properties
@@ -7,6 +7,7 @@ agentmock.service.port = 8888
 
 agentmock.controller.chain=com.taobao.caipiao.agentmock.controller.GenericControllerChain
 agentmock.controller.list=\
+			   com.taobao.caipiao.agentmock.controller.LogController \
 			   com.taobao.caipiao.agentmock.controller.BeforeAgentMockController,\
 			   com.taobao.caipiao.agentmock.controller.CommandController,\
 			   com.taobao.caipiao.agentmock.controller.AgentMockController,\
@@ -16,6 +17,7 @@ agentmock.controller.list=\
 # 2 prefix based, like caipiao.taobao.com/mock/mock 
 agentmock.command.url.prefix=/command/
 agentmock.commu.url.prefix=/commu/
+agentmock.log.url.prefix=/log/
 
 file.root=/app/notifyMsg/
 file.root.windows=C:\\notifyMsg\\
@@ -23,10 +25,11 @@ file.root.windows=C:\\notifyMsg\\
 # send notify switch, true or false
 agentmock.sendmsg.switch = false
 # send notify internal, the unit is milliseconds!
-agentmock.sendmsg.internal = 10000
+agentmock.sendmsg.interval = 10000
 # send notify counts
 agentmock.sendmsg.count = 2
-agentmock.sendmsg.agent.url=http://localhost:8888/AgentMockService
+# url to send notify msg, should identify the encoding!
+agentmock.sendmsg.agent.url=http://localhost:8888/AgentMockService/log/gbk
 #scheduled tasks
 agentmock.setting.schedule.task=com.taobao.caipiao.agentmock.core.impl.SendNotifyTask
 agentmock.sendmsg.path=notify
