--- a/agentmock-console/src/agentmock.properties
+++ b/agentmock-console/src/agentmock.properties
@@ -7,7 +7,7 @@ agentmock.service.port = 8888
 
 agentmock.controller.chain=com.taobao.caipiao.agentmock.controller.GenericControllerChain
 agentmock.controller.list=\
-			   com.taobao.caipiao.agentmock.controller.LogController \
+			   com.taobao.caipiao.agentmock.controller.LogController, \
 			   com.taobao.caipiao.agentmock.controller.BeforeAgentMockController,\
 			   com.taobao.caipiao.agentmock.controller.CommandController,\
 			   com.taobao.caipiao.agentmock.controller.AgentMockController,\
@@ -23,7 +23,7 @@ file.root=/app/notifyMsg/
 file.root.windows=C:\\notifyMsg\\
 
 # send notify switch, true or false
-agentmock.sendmsg.switch = false
+agentmock.sendmsg.switch = true
 # send notify internal, the unit is milliseconds!
 agentmock.sendmsg.interval = 10000
 # send notify counts
